--- a/calculos/templates/index.html
+++ b/calculos/templates/index.html
@@ -35,7 +35,7 @@
           <input type="hidden" name="modelo_vehiculoB" value="{{ select_modelB or '' }}">
 
           <br><br>
-          <button type="submit">Cargar dimensiones</button>
+          <button type="submit">Cargar Vehículo</button>
         </form>
 
         <hr style="margin-top: 10px;">
@@ -104,7 +104,7 @@
               <button id="calcularDistribucion" type="button">Calcular</button>
               
               <h4>CENTRO DE GRAVEDAD</h4>
-              <label for="centroAnteriorA">Desde eje ant(CMFa):</label>
+              <label for="centroAnteriorA">Desde eje ant (CMFa):</label>
               <input type="number" id="centroAnteriorA" name="centroAnteriorA" value="0">
 
               <label for="centroFrontalA">Desde el frontal:</label>
@@ -142,7 +142,7 @@
           <input type="hidden" name="modelo_vehiculoA" value="{{ select_modelA or '' }}">
 
           <br><br>
-          <button type="submit">Cargar dimensiones</button>
+          <button type="submit">Cargar Vehículo</button>
         </form>
 
         <hr style="margin-top: 10px;">
@@ -208,7 +208,7 @@
               <button id="calcularDistribucionB" type="button">Calcular</button>
               
               <h4>CENTRO DE GRAVEDAD</h4>
-              <label for="centroAnteriorB">Desde eje ant(CMFa):</label>
+              <label for="centroAnteriorB">Desde eje ant (CMFa):</label>
               <input type="number" id="centroAnteriorB" name="centroAnteriorB" value="0">
 
               <label for="centroFrontalA">Desde el frontal:</label>
