--- a/calculos/templates/index.html
+++ b/calculos/templates/index.html
@@ -53,28 +53,35 @@
               <input type="number" id="pesoA" name="peso" value="{{ resultadoA.get('peso', 0) }}" required>
 
               <label for="alturaA">Altura (mm):</label>
-              <input type="number" id="alturaA" name="altura" value="{{ resultadoA.altura if resultadoA else 0 }}" required>
+              <input type="number" id="alturaA" name="altura" value="{{ resultadoA.altura if resultadoA else 0 }}"
+                required>
 
               <label for="anchuraA">Anchura (mm):</label>
-              <input type="number" id="anchuraA" name="anchura" value="{{ resultadoA.anchura if resultadoA else 0 }}" required>
+              <input type="number" id="anchuraA" name="anchura" value="{{ resultadoA.anchura if resultadoA else 0 }}"
+                required>
 
               <label for="longitudA">Longitud (mm):</label>
-              <input type="number" id="longitudA" name="longitud" value="{{ resultadoA.longitud if resultadoA else 0 }}" required>
+              <input type="number" id="longitudA" name="longitud" value="{{ resultadoA.longitud if resultadoA else 0 }}"
+                required>
 
               <label for="batallaA">Batalla (mm):</label>
-              <input type="number" id="batallaA" name="batallaA" value="{{ resultadoA.batallaA if resultadoA else 0 }}" required>
+              <input type="number" id="batallaA" name="batallaA" value="{{ resultadoA.batallaA if resultadoA else 0 }}"
+                required>
 
               <label for="viaAntA">Vía Ant. (mm):</label>
-              <input type="number" id="viaAntA" name="viaAntA" value="{{ resultadoA.viaAntA if resultadoA else 0 }}" required>
+              <input type="number" id="viaAntA" name="viaAntA" value="{{ resultadoA.viaAntA if resultadoA else 0 }}"
+                required>
 
               <label for="viaPostA">Vía Post. (mm):</label>
-              <input type="number" id="viaPostA" name="viaPostA" value="{{ resultadoA.viaPostA if resultadoA else 0 }}" required>
+              <input type="number" id="viaPostA" name="viaPostA" value="{{ resultadoA.viaPostA if resultadoA else 0 }}"
+                required>
 
               <label for="volAntA">Vol Ant. (mm):</label>
               <input type="number" id="volAntA" name="volAntA" value="0" required>
 
               <label for="volPostA">Vol Post. (mm):</label>
-              <input type="number" id="volPostA" name="volPostA" value="{{ resultadoA.volPostA if resultadoA else 0 }}" required>
+              <input type="number" id="volPostA" name="volPostA" value="{{ resultadoA.volPostA if resultadoA else 0 }}"
+                required>
             </div>
 
             <div class="formCol">
@@ -82,13 +89,15 @@
 
               <div class="distribucion">
                 <label style="padding-top: 1px;" for="anteriorA">Anterior:</label>
-                <input type="number" id="anteriorA" name="anteriorA" value="{{ resultadoA.get('anteriorA', 0) }}" required>
+                <input type="number" id="anteriorA" name="anteriorA" value="{{ resultadoA.get('anteriorA', 0) }}"
+                  required>
 
                 <input type="number" id="pesoAnteriorA" name="pesoAnteriorA"
                   value="{{ (resultadoA.get('peso',0) * resultadoA.get('anteriorA',0) / 100) }}" readonly>
 
                 <label for="posteriorA">Posterior:</label>
-                <input type="number" id="posteriorA" name="posteriorA" value="{{ resultadoA.get('posteriorA', 0) }}" required>
+                <input type="number" id="posteriorA" name="posteriorA" value="{{ resultadoA.get('posteriorA', 0) }}"
+                  required>
 
                 <input type="number" id="pesoPosteriorA" name="pesoPosteriorA" value="0" readonly>
               </div>
@@ -149,28 +158,35 @@
               <input type="number" id="pesoB" name="peso" value="{{ resultadoB.peso if resultadoB else 0 }}" required>
 
               <label for="alturaB">Altura (mm):</label>
-              <input type="number" id="alturaB" name="altura" value="{{ resultadoB.altura if resultadoB else 0 }}" required>
+              <input type="number" id="alturaB" name="altura" value="{{ resultadoB.altura if resultadoB else 0 }}"
+                required>
 
               <label for="anchuraB">Anchura (mm):</label>
-              <input type="number" id="anchuraB" name="anchura" value="{{ resultadoB.anchura if resultadoB else 0 }}" required>
+              <input type="number" id="anchuraB" name="anchura" value="{{ resultadoB.anchura if resultadoB else 0 }}"
+                required>
 
               <label for="longitudB">Longitud (mm):</label>
-              <input type="number" id="longitudB" name="longitud" value="{{ resultadoB.longitud if resultadoB else 0 }}" required>
+              <input type="number" id="longitudB" name="longitud" value="{{ resultadoB.longitud if resultadoB else 0 }}"
+                required>
 
               <label for="batallaB">Batalla (mm):</label>
-              <input type="number" id="batallaB" name="batalla" value="{{ resultadoB.batallaB if resultadoB else 0 }}" required>
+              <input type="number" id="batallaB" name="batalla" value="{{ resultadoB.batallaB if resultadoB else 0 }}"
+                required>
 
               <label for="viaAntB">Vía Ant. (mm):</label>
-              <input type="number" id="viaAntB" name="viaAntB" value="{{ resultadoB.viaAntB if resultadoB else 0 }}" required>
+              <input type="number" id="viaAntB" name="viaAntB" value="{{ resultadoB.viaAntB if resultadoB else 0 }}"
+                required>
 
               <label for="viaPostB">Vía Post. (mm):</label>
-              <input type="number" id="viaPostB" name="viaPostB" value="{{ resultadoB.viaPostB if resultadoB else 0 }}" required>
+              <input type="number" id="viaPostB" name="viaPostB" value="{{ resultadoB.viaPostB if resultadoB else 0 }}"
+                required>
 
               <label for="volAntB">Vol. Ant. (mm):</label>
               <input type="number" id="volAntB" name="volAntB" value="0" required>
 
               <label for="volPostB">Vol. Post. (mm):</label>
-              <input type="number" id="volPostB" name="volPostB" value="{{ resultadoB.volPostB if resultadoB else 0 }}" required>
+              <input type="number" id="volPostB" name="volPostB" value="{{ resultadoB.volPostB if resultadoB else 0 }}"
+                required>
             </div>
 
             <div class="formCol">
@@ -178,13 +194,15 @@
 
               <div class="distribucion">
                 <label for="anteriorB">Anterior:</label>
-                <input type="number" step="1"  id="anteriorB" name="anteriorB" value="{{ resultadoB.get('anteriorB', 0)  }}" required>
+                <input type="number" step="1" id="anteriorB" name="anteriorB"
+                  value="{{ resultadoB.get('anteriorB', 0)  }}" required>
 
                 <input type="number" id="pesoAnteriorB" name="pesoAnteriorB"
                   value="{{ (resultadoB.get('peso',0) * resultadoB.get('anteriorB',0) / 100) }}" readonly>
 
                 <label for="posteriorB">Posterior:</label>
-                <input type="number" id="posteriorB" name="posteriorB" value="{{ resultadoB.get('posteriorB', 0) }}" required>
+                <input type="number" id="posteriorB" name="posteriorB" value="{{ resultadoB.get('posteriorB', 0) }}"
+                  required>
 
                 <input type="number" id="pesoPosteriorB" name="pesoPosteriorB" value="0" readonly>
               </div>
@@ -226,15 +244,118 @@
             </tr>
           </thead>
           <tbody>
-            {% for i in range(1, 15) %}
             <tr>
-              <td>medida {{ i }}</td>
-              <td><input type="number" step="any" id="c_{{ i }}" name="c_{{ i }}"></td>
-              <td><input type="number" step="any" id="dc_{{ i }}" name="dc_{{ i }}"></td>
-              <td><input type="number" step="any" id="zw_{{ i }}" name="zw_{{ i }}"></td>
-              <td><input type="number" step="any" id="area_{{ i }}" name="area_{{ i }}"></td>
+              <td>medida 1</td>
+              <td><input type="number" step="any" id="c_1" name="c_1"></td>
+              <td><input type="number" step="any" id="dc_1" name="dc_1" oninput="zw()"></td>
+              <td><input type="number" step="any" id="zw_1" name="zw_1"></td>
+              <td><input type="number" step="any" id="area_1" name="area_1"></td>
             </tr>
-            {% endfor %}
+
+            <tr>
+              <td>medida 2</td>
+              <td><input type="number" step="any" id="c_2" name="c_2"></td>
+              <td><input type="number" step="any" id="dc_2" name="dc_2" oninput="zw()"></td>
+              <td><input type="number" step="any" id="zw_2" name="zw_2" oninput="zw()"></td>
+              <td><input type="number" step="any" id="area_2" name="area_2"></td>
+            </tr>
+
+            <tr>
+              <td>medida 3</td>
+              <td><input type="number" step="any" id="c_3" name="c_3"></td>
+              <td><input type="number" step="any" id="dc_3" name="dc_3" oninput="zw()"></td>
+              <td><input type="number" step="any" id="zw_3" name="zw_3" oninput="zw()"></td>
+              <td><input type="number" step="any" id="area_3" name="area_3"></td>
+            </tr>
+
+            <tr>
+              <td>medida 4</td>
+              <td><input type="number" step="any" id="c_4" name="c_4"></td>
+              <td><input type="number" step="any" id="dc_4" name="dc_4" oninput="zw()"></td>
+              <td><input type="number" step="any" id="zw_4" name="zw_4" oninput="zw()"></td>
+              <td><input type="number" step="any" id="area_4" name="area_4"></td>
+            </tr>
+
+            <tr>
+              <td>medida 5</td>
+              <td><input type="number" step="any" id="c_5" name="c_5"></td>
+              <td><input type="number" step="any" id="dc_5" name="dc_5" oninput="zw()"></td>
+              <td><input type="number" step="any" id="zw_5" name="zw_5" oninput="zw()"></td>
+              <td><input type="number" step="any" id="area_5" name="area_5"></td>
+            </tr>
+
+            <tr>
+              <td>medida 6</td>
+              <td><input type="number" step="any" id="c_6" name="c_6"></td>
+              <td><input type="number" step="any" id="dc_6" name="dc_6" oninput="zw()"></td>
+              <td><input type="number" step="any" id="zw_6" name="zw_6" oninput="zw()"></td>
+              <td><input type="number" step="any" id="area_6" name="area_6"></td>
+            </tr>
+
+            <tr>
+              <td>medida 7</td>
+              <td><input type="number" step="any" id="c_7" name="c_7"></td>
+              <td><input type="number" step="any" id="dc_7" name="dc_7" oninput="zw()"></td>
+              <td><input type="number" step="any" id="zw_7" name="zw_7" oninput="zw()"></td>
+              <td><input type="number" step="any" id="area_7" name="area_7"></td>
+            </tr>
+
+            <tr>
+              <td>medida 8</td>
+              <td><input type="number" step="any" id="c_8" name="c_8"></td>
+              <td><input type="number" step="any" id="dc_8" name="dc_8" oninput="zw()"></td>
+              <td><input type="number" step="any" id="zw_8" name="zw_8" oninput="zw()"></td>
+              <td><input type="number" step="any" id="area_8" name="area_8"></td>
+            </tr>
+
+            <tr>
+              <td>medida 9</td>
+              <td><input type="number" step="any" id="c_9" name="c_9"></td>
+              <td><input type="number" step="any" id="dc_9" name="dc_9" oninput="zw()"></td>
+              <td><input type="number" step="any" id="zw_9" name="zw_9" oninput="zw()"></td>
+              <td><input type="number" step="any" id="area_9" name="area_9"></td>
+            </tr>
+
+            <tr>
+              <td>medida 10</td>
+              <td><input type="number" step="any" id="c_10" name="c_10"></td>
+              <td><input type="number" step="any" id="dc_10" name="dc_10" oninput="zw()"></td>
+              <td><input type="number" step="any" id="zw_10" name="zw_10" oninput="zw()"></td>
+              <td><input type="number" step="any" id="area_10" name="area_10"></td>
+            </tr>
+
+            <tr>
+              <td>medida 11</td>
+              <td><input type="number" step="any" id="c_11" name="c_11"></td>
+              <td><input type="number" step="any" id="dc_11" name="dc_11" oninput="zw()"></td>
+              <td><input type="number" step="any" id="zw_11" name="zw_11" oninput="zw()"></td>
+              <td><input type="number" step="any" id="area_11" name="area_11"></td>
+            </tr>
+
+            <tr>
+              <td>medida 12</td>
+              <td><input type="number" step="any" id="c_12" name="c_12"></td>
+              <td><input type="number" step="any" id="dc_12" name="dc_12" oninput="zw()"></td>
+              <td><input type="number" step="any" id="zw_12" name="zw_12" oninput="zw()"></td>
+              <td><input type="number" step="any" id="area_12" name="area_12"></td>
+            </tr>
+
+            <tr>
+              <td>medida 13</td>
+              <td><input type="number" step="any" id="c_13" name="c_13"></td>
+              <td><input type="number" step="any" id="dc_13" name="dc_13" oninput="zw()"></td>
+              <td><input type="number" step="any" id="zw_13" name="zw_13" oninput="zw()"></td>
+              <td><input type="number" step="any" id="area_13" name="area_13"></td>
+            </tr>
+
+            <tr>
+              <td>medida 14</td>
+              <td><input type="number" step="any" id="c_14" name="c_14"></td>
+              <td><input type="number" step="any" id="dc_14" name="dc_14" oninput="zw()"></td>
+              <td><input type="number" step="any" id="zw_14" name="zw_14" oninput="zw()"></td>
+              <td><input type="number" step="any" id="area_14" name="area_14"></td>
+            </tr>
+
           </tbody>
         </table>
       </section>
@@ -266,7 +387,7 @@
     </div>
   </div>
 
-  <script src="{{ url_for('static', filename='script.js') }}"></script>
+  <script src="{{ url_for('static', filename='datosTecnicos.js') }}"></script>
 </body>
 
 </html>
