--- a/calculos/static/style.css
+++ b/calculos/static/style.css
@@ -171,6 +171,26 @@ hr{
   padding-left: 6px;
 }
 
+.tooltip-container{
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip{
+  position: absolute;
+  top: -35px;           /* arriba del input */
+  left: 0;
+  background: #333;
+  color: white;
+  padding: 6px 10px;
+  border-radius: 6px;
+  font-size: 13px;
+  white-space: nowrap;
+  display: none;
+  z-index: 10;
+}
+
+
 /* ====== MEDIDAS DEFORMACIONES ====== */
 .medidasDeformaciones {
   display: grid;
